# libXamine

./: .gitignore  .vimrc  Makefile.am  configure.ac  devel.sh
src/: strsplit.c  strsplit.h  utils.c  utils.h  xamine.c  xamine.h
test/: ev.c
